# bigjson

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  array.py  bigjson.py  filereader.py  obj.py  pyproject.toml  setup.cfg  setup.py
bigjson/: __init__.py  array.py  filereader.py  obj.py
tests/: crlf_data.json  test_basics.py  test_corruption.py  test_crlf_line_terminators.py  test_double_backslash.py  test_unicode_surrogates.py  unicode_surrogates_data.json  unicode_zhcn.json
