[metadata]
name = bigjson
version = 1.0.9
author = Henrik Heino
author_email = henrik.heino@gmail.com
license = MIT
description = Python library that reads JSON files of any size.
url = https://henu.fi/bigjson
project_urls =
    Source Code = https://github.com/henu/bigjson
    Issue Tracker = https://github.com/henu/bigjson/issues

[options]
packages = bigjson
